@@ -1,7 +1,7 @@
 /***************************************************************************
  *           GCTAOnOffObservation.i - CTA on-off observation class         *
  * ----------------------------------------------------------------------- *
- *  copyright (C) 2013-2017 by Michael Mayer                               *
+ *  copyright (C) 2013-2018 by Michael Mayer                               *
  * ----------------------------------------------------------------------- *
  *                                                                         *
  *  This program is free software: you can redistribute it and/or modify   *
@@ -82,7 +82,7 @@ public:
                          const GArf& arf,
                          const GRmf& rmf);
     GCTAOnOffObservation(const GCTAObservation& obs,
-                         const GSkyDir&         srcdir,
+                         const GModelSpatial&   spatial,
                          const GEbounds&        etrue,
                          const GEbounds&        ereco,
                          const GSkyRegions&     on,
@@ -116,8 +116,8 @@ public:
     const GPha& off_spec(void) const;
     const GArf& arf(void) const;
     const GRmf& rmf(void) const;
-    GPha model_gamma(const GModels& models) const;
-    GPha model_background(const GModels& models) const;
+    GPha        model_gamma(const GModels& models) const;
+    GPha        model_background(const GModels& models) const;
 };
 
 
