@@ -1,20 +1,21 @@
-2018-06-06
+2018-06-07
 
         * Version 1.6.0 released
         ========================
 
-        Handle observation-specific energy thresholds in CTA On/Off analysis (#2429)
         Fix handling of q-mode parameters (#2495)
         Speed up computation of diffuse map models for CTA (#2466)
         Enhance GModelSpatialRadialProfileGauss class (#2463)
         Increase integration precision for CTA diffuse model response (#2458)
         Add GCTAModelRadialAcceptance model component setter methods
-        Keep existing library path in installation script on Mac OS X (#2420)
+        Handle observation-specific energy thresholds in CTA On/Off analysis (#2429)
         Add GCTAEdisp::prob_erecobin() method (#2422)
         Add gammalib::gauss_integral() function (#2422)
+        Keep existing library path in installation script on Mac OS X (#2420)
         Add GSkyDir::cos_dist() method (#2309)
         Add GCTABackground::rate_ebin() method and gammalib::atan2() and
           gammalib::plaw_integral() functions (#2308)
+        Handle extended models in CTA On/Off analysis (#2292)
 
 
 2018-04-26
